
All (GUI):

- wxRTC: speeded up image saving to XML (WriteHex).
- wxRTC: added ForceDelayedLayout to override delayed layout for large buffers.
- wxRTC: fixed wxRichTextCtrl::Replace() to use specified range instead of selection.
- wxRTC: indent dialog no longer ignores first-line indent if no indent specified.
- wxRTC: improved outline and line spacing controls, and added page break control.
- wxRTC: added ability to deselect attributes in font formatting dialog
- Fixed buffer overrun when saving ICO image with a width that's not a multiple of 4.
- Fixed wxOwnerDrawnComboBox/wxBitmapComboBox client data corruption when
  wxCB_SORT is used.

wxMSW:

- Multiline text controls no longer select all content when gaining focus from
  the keyboard.

wxGTK:

- Fix wxClipboard::GetData() for asymmetric wxDataObjects (Timothy Lee).


2.8.12:
-------

All:

- Fixed a bug in UNC path testing.
- Improved command line parser usage help.
- Fixed race condition bugs in wxCondition.
- Added wxT_2() for forward compatibility with wxWidgets 3. Use it in
  initialization of wxCmdLineEntryDesc struct elements and (very few) other
  places where wxT() is required currently but won't be allowed in v3.
- Fixed crash on exit caused by deleting old logger in wxLogChain dtor.

All (GUI):

- wxRTC: fixed style selection resetting after editing a style.
- wxRTC: can now edit line spacing in .1 increments from 1 to 2.
- wxRTC: fixed wrong line spacing and space after paragraph calculations.
- wxRTC: GetStyleMergedWithBase now detects loops.
- wxRTC: wxRichTextCtrl::ApplyStyle now applies a paragraph style at the
  cursor without needing a selection, and setting the default style now
  avoids duplicating character attributes in subsequently typed text when
  they exist in the paragraph style.
- wxRTC: fixed IsPositionVisible to scroll a position into view correctly.
- wxRTC: fixed a problem with paste resetting the content paragraph style.